# dbx-mcp-server

./: .gitignore  ARCHITECTURE.md  AZURE_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  azure.yaml  check_schema.py  check_table.py  generate_logs.py  get_latest_5_logs.py  latest_errors.py  test_query.py
.github/agents/: databricks-expert.agent.md  python-mcp.agent.md
.github/workflows/: issue-analyzer.lock.yml  issue-analyzer.md
databricks_notebooks/: parse_error_logs.py
infra/: main.bicep
infra/modules/: apim.bicep  container-app.bicep  container-apps-env.bicep  container-registry.bicep
mcp_server/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
mcp_server/databricks_error_logs_mcp/: __init__.py  __main__.py  server.py  server_old.py
