[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databricks-error-logs-mcp"
version = "0.1.0"
description = "MCP server for searching Databricks error logs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "databricks-sdk>=0.20.0",
    "pydantic>=2.0.0",
]

[project.scripts]
server = "databricks_error_logs_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["databricks_error_logs_mcp"]

[tool.uv.sources]
